--- a/homework1/tjl/exam1.ipynb
+++ b/homework1/tjl/exam1.ipynb
@@ -690,8 +690,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-23T03:57:48.864722Z",
-     "start_time": "2024-10-23T03:57:48.844583Z"
+     "end_time": "2024-10-23T06:16:35.616240Z",
+     "start_time": "2024-10-23T06:16:35.601414Z"
     }
    },
    "cell_type": "code",
@@ -700,14 +700,7 @@
     "import numpy as np\n",
     "\n",
     "# 读取波士顿房价数据\n",
-    "data = pd.read_csv('boston_housing.csv', sep=',', header=None)\n",
-    "\n",
-    "# 指定列名\n",
-    "data.columns = ['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS',\n",
-    "                'RAD', 'TAX', 'PTRATIO', 'B', 'LSTAT', 'MEDV']\n",
-    "\n",
-    "# 检查数据类型并强制转换为浮点型\n",
-    "data = data.apply(pd.to_numeric, errors='coerce')\n",
+    "data = pd.read_csv('boston_housing.csv', sep=',', header=0)\n",
     "\n",
     "# 构造新特征\n",
     "data['RM_LSTAT'] = data['RM'] * data['LSTAT']  # 房间数乘低收入人群比例\n",
@@ -767,7 +760,7 @@
      ]
     }
    ],
-   "execution_count": 20
+   "execution_count": 1
   },
   {
    "metadata": {},
