--- a/homework1/tjl/exam2.ipynb
+++ b/homework1/tjl/exam2.ipynb
@@ -46,9 +46,9 @@
     "rmse = np.sqrt(mse)\n",
     "\n",
     "# 打印模型评估指标\n",
-    "print('MSE:', mse)\n",
-    "print('RMSE:', rmse)\n",
-    "print('R^2:', lr.score(X_test, y_test))\n"
+    "print('MSE:', mse)  # 均方误差\n",
+    "print('RMSE:', rmse)  # 均方根误差\n",
+    "print('R^2:', lr.score(X_test, y_test))  # R^2\n"
    ],
    "outputs": [
     {
